--- a/README.Rmd
+++ b/README.Rmd
@@ -66,7 +66,7 @@ I am thankful to Òscar [Jordà](https://sites.google.com/site/oscarjorda/) for 
 [paper](https://www.journals.uchicago.edu/doi/10.1086/696277). 
 
 I greatly benefit from the helpful and critical remarks by Jon [Danielsson](http://www.systemicrisk.ac.uk/people/jon-danielsson) and from the profound *R*, *Rcpp* and *GitHub* knowledge of Philipp [Wittenberg](https://github.com/wittenberg) and Detlef (overflow) [Steuer](https://github.com/dsteuer).
-Last but not least, I am grateful to Philipp Dybowski for his comments and without whom I would have never started this project.
+Last but not least, I am grateful to Philipp Dybowski without whom I would have never started this project.
 
 All remaining errors are obviously mine. 
 
