--- a/vignettes/lpirfs_vignette.Rmd
+++ b/vignettes/lpirfs_vignette.Rmd
@@ -11,7 +11,7 @@ vignette: >
 
 ## Purpose
 
-This vignette replicates all figures in the paper  
+This vignette shows how to use *lpirfs* by replicating all figures of the paper  
 "lpirfs: An R-Package to Estimate Impulse Response Functions by Local Projections"  
 
 
@@ -43,7 +43,7 @@ This vignette replicates all figures in the paper
 
 ```
 
-```{r, fig.height = 5.5, fig.width = 6, fig.align = "center", message = FALSE }  
+```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE }  
 
  # Figure 1 in paper
  plot(results_lin)
@@ -56,7 +56,7 @@ This vignette replicates all figures in the paper
 
 
 #####################################################################################################
-#                 -           --  Code for Figure 2 ---
+#                          ---  Code for Figure 2 ---
 #####################################################################################################
  # Load packages for creating plots
  library(gridExtra)
@@ -109,6 +109,7 @@ This vignette replicates all figures in the paper
 #####################################################################################################
 #                           ---  Code for Figure 3 ---
 #####################################################################################################
+
 
 # Load data
  ag_data       <- ag_data
@@ -190,7 +191,7 @@ This vignette replicates all figures in the paper
 
 
 
-```{r, fig.height = 4.5, fig.width = 6, fig.align = "center", message = FALSE }  
+```{r, fig.height = 4., fig.width = 6.5, fig.align = "center", message = FALSE }  
 
  
  # Show all plots
@@ -203,7 +204,6 @@ This vignette replicates all figures in the paper
 
 
 ```{r, message = FALSE}
-
 
 #####################################################################################################
 #                               ---  Code for Figure 4 ---
@@ -284,7 +284,6 @@ This vignette replicates all figures in the paper
 
 ```{r, message = FALSE}
 
-
 #####################################################################################################
 #                           ---  Code for Figure 5 ---
 #####################################################################################################
@@ -325,9 +324,8 @@ This vignette replicates all figures in the paper
 
 ```{r, message = FALSE}
 
-
 #####################################################################################################
-#                 ---  Code for Figure 6 ---
+#                        ---  Code for Figure 6 ---
 #####################################################################################################
 library(vars)
 library(lpirfs)
@@ -495,7 +493,7 @@ a_3 <- annotate_figure(a_3, bottom = text_grob(paste("c.)", "p = ", p_lags[3], s
 
 
 
-```{r, fig.height = 5.5, fig.width = 6, fig.align = "center", message = FALSE }  
+```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE }
 
 
 # Combine columns
@@ -512,7 +510,7 @@ combine_plot
 
 
 #####################################################################################################
-#                 ---  Code for Figure 7 ---
+#                         ---  Code for Figure 7 ---
 #####################################################################################################
 library(lpirfs)
 library(dplyr)
@@ -698,7 +696,7 @@ for (kk in 1:3){
 
 
 
-```{r, fig.height = 5.5, fig.width = 6, fig.align = "center", message = FALSE } 
+```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE }
 
 
 # Combine columns
@@ -897,7 +895,7 @@ a_3 <- annotate_figure(a_3, bottom = text_grob(bquote(paste("c) Results for ", ~
 
 
 
-```{r, fig.height = 5, fig.width = 5, fig.align = "center", message = FALSE }
+```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE }
 
 # Combine columns
 combine_plot <- ggarrange(a_1, a_2, a_3, ncol = 3)
@@ -915,7 +913,7 @@ combine_plot
 
 
 #####################################################################################################
-#                 ---  Comparing standard and Newey West estimators  ---
+#                   Comparing normal and Newey West standard errors
 #####################################################################################################
 
 library(lpirfs)
@@ -1026,7 +1024,7 @@ x_labs <- c("a.) Normal Std. Errors", "b.) Newy West (1987)", "c.) Pre-whitened 
 
 
 
-```{r, fig.height = 5, fig.width = 5, fig.align = "center", message = FALSE }
+```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE }
 
 # Combine columns
   combine_plot <- ggarrange(a_1, a_2, a_3, ncol = 3)
