Regarding old CRAN release 0.1.9

--- a/vignettes/lpirfs_vignette.Rmd
+++ b/vignettes/lpirfs_vignette.Rmd
@@ -4,7 +4,7 @@ author: "Philipp Adämmer"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Replications and applications withl lpirfs}
+  %\VignetteIndexEntry{Replications and applications with lpirfs}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -15,7 +15,7 @@ This vignette shows how to use *lpirfs* by replicating all figures of the paper
 "lpirfs: An R-Package to Estimate Impulse Response Functions by Local Projections"  
 
 
-```{r, message = FALSE}
+```{r, message = FALSE, warning = FALSE}
 
 #####################################################################################################
 #                            ---   Code for Figure 1  ---                                  
@@ -43,7 +43,7 @@ This vignette shows how to use *lpirfs* by replicating all figures of the paper
 
 ```
 
-```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE }  
+```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE, warning = FALSE}  
 
  # Figure 1 in paper
  plot(results_lin)
@@ -52,7 +52,7 @@ This vignette shows how to use *lpirfs* by replicating all figures of the paper
 
 
 
-```{r, message = FALSE}
+```{r, message = FALSE, warning = FALSE}
 
 
 #####################################################################################################
@@ -104,7 +104,7 @@ This vignette shows how to use *lpirfs* by replicating all figures of the paper
 
 
 
-```{r, message = FALSE}
+```{r, message = FALSE, warning = FALSE}
 
 #####################################################################################################
 #                           ---  Code for Figure 3 ---
@@ -191,7 +191,7 @@ This vignette shows how to use *lpirfs* by replicating all figures of the paper
 
 
 
-```{r, fig.height = 4., fig.width = 6.5, fig.align = "center", message = FALSE }  
+```{r, fig.height = 4., fig.width = 6.5, fig.align = "center", message = FALSE, warning = FALSE}  
 
  
  # Show all plots
@@ -203,7 +203,7 @@ This vignette shows how to use *lpirfs* by replicating all figures of the paper
 
 
 
-```{r, message = FALSE}
+```{r, message = FALSE, warning = FALSE}
 
 #####################################################################################################
 #                               ---  Code for Figure 4 ---
@@ -271,7 +271,7 @@ This vignette shows how to use *lpirfs* by replicating all figures of the paper
 
 
 
-```{r, fig.height = 2.5, fig.width = 3, fig.align = "center", message = FALSE }
+```{r, fig.height = 2.5, fig.width = 3, fig.align = "center", message = FALSE, warning = FALSE}
 
 
 # Plot irfs
@@ -282,7 +282,7 @@ This vignette shows how to use *lpirfs* by replicating all figures of the paper
 
 
 
-```{r, message = FALSE}
+```{r, message = FALSE, warning = FALSE}
 
 #####################################################################################################
 #                           ---  Code for Figure 5 ---
@@ -312,7 +312,7 @@ This vignette shows how to use *lpirfs* by replicating all figures of the paper
 
 
 
-```{r, fig.height = 2.5, fig.width = 5, fig.align = "center", message = FALSE }
+```{r, fig.height = 2.5, fig.width = 5, fig.align = "center", message = FALSE, warning = FALSE}
 
 
 # Show non-linear plots
@@ -322,7 +322,7 @@ This vignette shows how to use *lpirfs* by replicating all figures of the paper
 
 
 
-```{r, message = FALSE}
+```{r, message = FALSE, warning = FALSE}
 
 #####################################################################################################
 #                        ---  Code for Figure 6 ---
@@ -493,7 +493,7 @@ a_3 <- annotate_figure(a_3, bottom = text_grob(paste("c.)", "p = ", p_lags[3], s
 
 
 
-```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE }
+```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE, warning = FALSE}
 
 
 # Combine columns
@@ -506,7 +506,7 @@ combine_plot
 
 
 
-```{r, message = FALSE}
+```{r, message = FALSE, warning = FALSE}
 
 
 #####################################################################################################
@@ -518,20 +518,17 @@ library(ggplot2)
 library(gridExtra)
 library(ggpubr)
 library(zoo)
-library(quantmod)
 
-# Use quantmod to get Recession data
-getSymbols("USREC",  src="FRED")
+# Recession dates
+  start_rec <- c("1957 Q3", "1960 Q2", "1970 Q1", "1973 Q4", "1980 Q1", "1981 Q3", "1990 Q3", "2001 Q2")
+  end_rec   <- c("1958 Q2", "1961 Q1", "1970 Q4", "1975 Q1", "1980 Q3", "1982 Q4", "1991 Q1", "2001 Q4")
 
-# Quarerly fequence for Jordá data
+# Quarterly fequence for Jordá data
   dates    <- as.yearqtr(seq(as.Date("1955/12/1"), as.Date("2003/1/1"), by = "quarter"))
 
-  start_rec <- as.yearqtr(index(USREC[which(diff(USREC$USREC) == 1)]))
-  end_rec   <- as.yearqtr(index(USREC[which(diff(USREC$USREC) == -1) -1]))
-
-  nber_rec_se <- tibble(start = as.yearqtr(start_rec), end = as.yearqtr(end_rec)[-1]) %>%
-                 filter(start %in% dates) %>%
-                 mutate(start = as.Date(start)) %>%
+  nber_rec_se <- tibble(start = as.yearqtr(start_rec), end = as.yearqtr(end_rec)) %>%
+                 filter(start %in% dates)                                             %>%
+                 mutate(start = as.Date(start))                                       %>%
                  mutate(end   = as.Date(end))
 
 # Convert back with as.Date for ggplot
@@ -539,25 +536,25 @@ getSymbols("USREC",  src="FRED")
 
 
 # Load data from lpirfs package
-endog_data         <- interest_rules_var_data
-switching_variable <-  interest_rules_var_data$GDP_gap
-
-hor        <- 12
-shock_pos  <- 3
+  endog_data         <- interest_rules_var_data
+  switching_variable <-  interest_rules_var_data$GDP_gap
+  
+  hor        <- 12
+  shock_pos  <- 3
 
 # Results for lpirfs
-results_s1_mean        <- matrix(NA, 3, hor + 1)
-results_s1_low         <- results_s1_mean
-results_s1_up          <- results_s1_mean
-
-results_s2_mean        <- matrix(NA, 3, hor + 1)
-results_s2_low         <- results_s2_mean
-results_s2_up          <- results_s2_mean
-
-fz_mat                 <- matrix(NA, 3, dim(endog_data)[1] - 4)
+  results_s1_mean        <- matrix(NA, 3, hor + 1)
+  results_s1_low         <- results_s1_mean
+  results_s1_up          <- results_s1_mean
+  
+  results_s2_mean        <- matrix(NA, 3, hor + 1)
+  results_s2_low         <- results_s2_mean
+  results_s2_up          <- results_s2_mean
+  
+  fz_mat                 <- matrix(NA, 3, dim(endog_data)[1] - 4)
 
 # Choose values for lambda and gamma
-gamma_vals  <- c(1, 5, 10)
+  gamma_vals  <- c(1, 5, 10)
 #lambda_vals <- c(6.25, 1600, 129,600)
 
 for(ii in seq_along(gamma_vals)){
@@ -696,7 +693,7 @@ for (kk in 1:3){
 
 
 
-```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE }
+```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE, warning = FALSE}
 
 
 # Combine columns
@@ -708,7 +705,7 @@ combine_plot
 
 
 
-```{r, message = FALSE}
+```{r, message = FALSE, warning = FALSE}
 
 
 
@@ -722,46 +719,46 @@ library(ggplot2)
 library(gridExtra)
 library(ggpubr)
 library(zoo)
-library(quantmod)
 
-# Use quantmod to get Recession data
-getSymbols("USREC",  src="FRED")
+# Recession dates
+  start_rec <- c("1957 Q3", "1960 Q2", "1970 Q1", "1973 Q4", "1980 Q1", "1981 Q3", "1990 Q3", "2001 Q2")
+  end_rec   <- c("1958 Q2", "1961 Q1", "1970 Q4", "1975 Q1", "1980 Q3", "1982 Q4", "1991 Q1", "2001 Q4")
 
-# Quarerly fequence for Jordá data
-dates    <- as.yearqtr(seq(as.Date("1955/12/1"), as.Date("2003/1/1"), by = "quarter"))
+# Quarterly fequence for Jordá data
+  dates    <- as.yearqtr(seq(as.Date("1955/12/1"), as.Date("2003/1/1"), by = "quarter"))
 
-start_rec <- as.yearqtr(index(USREC[which(diff(USREC$USREC) == 1)]))
-end_rec   <- as.yearqtr(index(USREC[which(diff(USREC$USREC) == -1) -1]))
-
-nber_rec_se <- tibble(start = as.yearqtr(start_rec), end = as.yearqtr(end_rec)[-1]) %>%
-                filter(start %in% dates) %>%
-                mutate(start = as.Date(start)) %>%
-                mutate(end   = as.Date(end))
+  nber_rec_se <- tibble(start = as.yearqtr(start_rec), end = as.yearqtr(end_rec)) %>%
+                 filter(start %in% dates)                                             %>%
+                 mutate(start = as.Date(start))                                       %>%
+                 mutate(end   = as.Date(end))
 
 # Convert back with as.Date for ggplot
-dates    <- as.Date(dates)
+  dates    <- as.Date(dates)
+
+# Convert back with as.Date for ggplot
+  dates    <- as.Date(dates)
 
 
 # Load data from lpirfs package
-endog_data         <- interest_rules_var_data
-switching_variable <-  interest_rules_var_data$GDP_gap
+  endog_data         <- interest_rules_var_data
+  switching_variable <-  interest_rules_var_data$GDP_gap
 
-hor        <- 12
-shock_pos  <- 3
+  hor        <- 12
+  shock_pos  <- 3
 
 # Results for lpirfs
-results_s1_mean        <- matrix(NA, 3, hor + 1)
-results_s1_low         <- results_s1_mean
-results_s1_up          <- results_s1_mean
+  results_s1_mean        <- matrix(NA, 3, hor + 1)
+  results_s1_low         <- results_s1_mean
+  results_s1_up          <- results_s1_mean
+  
+  results_s2_mean        <- matrix(NA, 3, hor + 1)
+  results_s2_low         <- results_s2_mean
+  results_s2_up          <- results_s2_mean
+  
+  fz_mat                 <- matrix(NA, 3, dim(endog_data)[1] - 4)
 
-results_s2_mean        <- matrix(NA, 3, hor + 1)
-results_s2_low         <- results_s2_mean
-results_s2_up          <- results_s2_mean
-
-fz_mat                 <- matrix(NA, 3, dim(endog_data)[1] - 4)
-1
 # Choose values for lambda
-lambda_vals <- c(6.25, 1600, 129600)
+  lambda_vals <- c(6.25, 1600, 129600)
 
 for(ii in seq_along(lambda_vals)){
 
@@ -796,17 +793,17 @@ for(ii in seq_along(lambda_vals)){
 col_names <- names(endog_data)
 
 # Colors to use
-col_regime_1 <- "#21618C"
-col_regime_2 <- "#D68910"
-
-
-irf_s1_plots <- list()
-irf_s2_plots <- list()
-fz_plots     <- list()
+  col_regime_1 <- "#21618C"
+  col_regime_2 <- "#D68910"
+  
+  
+  irf_s1_plots <- list()
+  irf_s2_plots <- list()
+  fz_plots     <- list()
 
 # Loop to fill to create plots
-plot_num  <- 1
-for (kk in 1:3){
+  plot_num  <- 1
+  for (kk in 1:3){
 
 
   # Convert matrices to tibble for ggplot
@@ -881,21 +878,21 @@ for (kk in 1:3){
 
 
 # Make column plots
-a_1 <- ggarrange(fz_plots[[1]], irf_s1_plots[[1]], irf_s2_plots[[1]], ncol = 1, nrow = 3)
-a_1 <- annotate_figure(a_1, bottom = text_grob(bquote(paste("a) Results for ", ~lambda == .(lambda_vals[1]))), face = "bold", size = 10, hjust = .3, vjust = .5))
-
-a_2 <- ggarrange(fz_plots[[2]], irf_s1_plots[[2]], irf_s2_plots[[2]], ncol = 1, nrow = 3)
-a_2 <- annotate_figure(a_2, bottom = text_grob(bquote(paste("b) Results for ", ~lambda == .(lambda_vals[2]))), face = "bold", size = 10, hjust = .3, vjust = .5))
-
-a_3 <- ggarrange(fz_plots[[3]], irf_s1_plots[[3]], irf_s2_plots[[3]], ncol = 1, nrow = 3)
-a_3 <- annotate_figure(a_3, bottom = text_grob(bquote(paste("c) Results for ", ~lambda == "129 600")), face = "bold", size = 10, hjust = .4, vjust = .5))
+  a_1 <- ggarrange(fz_plots[[1]], irf_s1_plots[[1]], irf_s2_plots[[1]], ncol = 1, nrow = 3)
+  a_1 <- annotate_figure(a_1, bottom = text_grob(bquote(paste("a) Results for ", ~lambda == .(lambda_vals[1]))), face = "bold", size = 10, hjust = .3, vjust = .5))
+  
+  a_2 <- ggarrange(fz_plots[[2]], irf_s1_plots[[2]], irf_s2_plots[[2]], ncol = 1, nrow = 3)
+  a_2 <- annotate_figure(a_2, bottom = text_grob(bquote(paste("b) Results for ", ~lambda == .(lambda_vals[2]))), face = "bold", size = 10, hjust = .3, vjust = .5))
+  
+  a_3 <- ggarrange(fz_plots[[3]], irf_s1_plots[[3]], irf_s2_plots[[3]], ncol = 1, nrow = 3)
+  a_3 <- annotate_figure(a_3, bottom = text_grob(bquote(paste("c) Results for ", ~lambda == "129 600")), face = "bold", size = 10, hjust = .4, vjust = .5))
 
 
 ```
 
 
 
-```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE }
+```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE, warning = FALSE}
 
 # Combine columns
 combine_plot <- ggarrange(a_1, a_2, a_3, ncol = 3)
@@ -909,7 +906,7 @@ combine_plot
 
 
 
-```{r, message = FALSE}
+```{r, message = FALSE, warning = FALSE}
 
 
 #####################################################################################################
@@ -1024,7 +1021,7 @@ x_labs <- c("a.) Normal Std. Errors", "b.) Newy West (1987)", "c.) Pre-whitened 
 
 
 
-```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE }
+```{r, fig.height = 6, fig.width = 6.5, fig.align = "center", message = FALSE, warning = FALSE}
 
 # Combine columns
   combine_plot <- ggarrange(a_1, a_2, a_3, ncol = 3)
